--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
-Hello GitHub Pages
+<!DOCTYPE html>
+<html lang="ja">
+	<head>
+		<!--文字コードの指定-->
+		<meta charset="utf-8">
+		<!--InternetExplorerのブラウザではバージョン毎に異なるレンダリングがされてしまって崩れることがあるので、互換表示をさせないために設定するmetaタグ-->
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<!--レスポンシブ・ウェブデザインにするために必要なmetaタグ-->
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- 後で記入 20170223-->
+		<title>H.I my room</title>
+		<!-- BootstrapのCSS読み込み -->
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<!-- jQuery読み込み -->
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<!-- BootstrapのJS読み込み -->
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" href="myname.css">
+	</head>
+	<body>
+	    <div class="container">
+            <div class="row">
+				<div class="col-md-4">
+        		<img src="name.jpg" alt="">
+				</div>
+				<div class="col-md-8">
+        		<h1>Hiroyuki Inoguchi</h1>
+        		<section>
+        		<h2>自己紹介<h2>
+				<p id="test">ネットワークエンジニアですが、<strong>Ruby on Rails</strong>勉強中です。</p>
+                <p>今後作成したアプリを下記に紹介していきたいです。</p>
+        		<p>写真は好きな食べ物です。</p>
+        		</section>
+        		</div>
+    		</div>
+    		<div class="row">
+    			<div class="table-responsive">
+    				<!--レスポンシブ対応-->
+    				<table class="table table-bordered table-striped">
+    				<thead>
+    					<tr>
+    						<th>#</th>
+    						<th>application</th>
+    						<th>Description</th>
+    						<th>Link</th>
+    					</tr>
+    				</thead>
+    				<tbody>
+    					<tr>
+    						<th>1</th>
+    						<td>message board</td>
+    						<td>掲示板です。使いやすいことを第一に設計しました。</td>
+    						<td><button type="button" class="btn btn-link">coming soon</button></td>
+    					</tr>
+    					<tr>
+    						<th>2</th>
+    						<td>clone</td>
+    						<td>SNSです。大事な友人との会話にどうぞ。</td>
+    						<td><button type="button" class="btn btn-link">coming soon</button></td>
+    					</tr>
+    					<tr>
+    						<th>3</th>
+    						<td>monolist</td>
+    						<td>ECサイトです。これを使えば商売繁盛間違いなし。</td>
+    						<td><button type="button" class="btn btn-link">coming soon</button></td>
+    					</tr>
+    					<tr>
+    						<th>4</th>
+    						<td>グルメ</td>
+    						<td>coming soon</td>
+    						<td><button type="button" class="btn btn-link">coming soon</button></td>
+    					</tr>
+    				</tbody>
+    				</table>
+    			</div>
+    		</div>
+		</div>
+		<footer>
+			<div class="copyright">© H.I Inc.</div>
+		</footer>
+	</body>
+</html>
