--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<div class="col-md-8">
         		<h1>Hiroyuki Inoguchi</h1>
         		<section>
-        		<h2>自己紹介<h2>
+        		<h2>自己紹介</h2>
 				<p id="test">ネットワークエンジニアですが、<strong>Ruby on Rails</strong>勉強中です。</p>
                 <p>今後作成したアプリを下記に紹介していきたいです。</p>
         		<p>写真は好きな食べ物です。</p>
